--- a/StocksOfPoverty/src/stocksofpoverty/Market.form
+++ b/StocksOfPoverty/src/stocksofpoverty/Market.form
@@ -295,6 +295,7 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="text" type="java.lang.String" value="jTextField1"/>
+                <Property name="toolTipText" type="java.lang.String" value=""/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="stock6">
@@ -549,28 +550,6 @@
             </Component>
           </SubComponents>
         </Container>
-        <Container class="javax.swing.JPanel" name="jPanel2">
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="tab2">
-                <Property name="tabTitle" type="java.lang.String" value="tab2"/>
-              </JTabbedPaneConstraints>
-            </Constraint>
-          </Constraints>
-
-          <Layout>
-            <DimensionLayout dim="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="543" max="32767" attributes="0"/>
-              </Group>
-            </DimensionLayout>
-            <DimensionLayout dim="1">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="247" max="32767" attributes="0"/>
-              </Group>
-            </DimensionLayout>
-          </Layout>
-        </Container>
         <Container class="javax.swing.JPanel" name="jPanel3">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
@@ -588,6 +567,17 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel1" max="32767" attributes="0"/>
                           <Component id="accountBalance" pref="531" max="32767" attributes="0"/>
+                          <Component id="loan" pref="531" max="32767" attributes="0"/>
+                          <Component id="monthlyInterestRate" pref="531" max="32767" attributes="0"/>
+                          <Component id="spectedYearTax" pref="531" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="loanTextField" min="-2" pref="126" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="takeLoan" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="repayLoan" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -600,7 +590,19 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="accountBalance" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="197" max="32767" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="loan" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="monthlyInterestRate" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="spectedYearTax" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="84" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="loanTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="takeLoan" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="repayLoan" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -616,6 +618,46 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Account Balance"/>
               </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="loan">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Loan"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="monthlyInterestRate">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Monthly interest rate"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JLabel" name="spectedYearTax">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Spected yearly tax Payment"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JFormattedTextField" name="loanTextField">
+              <Events>
+                <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="loanTextFieldFocusGained"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="loanTextFieldKeyTyped"/>
+              </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JFormattedTextField()"/>
+              </AuxValues>
+            </Component>
+            <Component class="javax.swing.JButton" name="takeLoan">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Take Loan"/>
+              </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="takeLoanMouseClicked"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="repayLoan">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Repay Loan"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="repayLoanActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -697,7 +739,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="pauseButtom">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Pause"/>
+        <Property name="text" type="java.lang.String" value="Start Game"/>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="pauseButtomMouseClicked"/>
